Sto continuando con la gestione del prompt dei comandi(ultima riga dell'editor). Sto gestedo il salvataggio del file nel caso in cui non passassi nulla ad argv[1]: * Ora posso inserire il nome del file, cancellarlo, ripensare al suo salvataggio, ovvero premendo il tasto esc nell'editor esce dal salvataggio * Ora le gestione della memoria per un nuovo file è più efficiente * Risolto il bug che non salvava correttamente il file (mancava solo il '\0' alla fine

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,8 +2,10 @@ CC=gcc
 mioEditor: mioEditor.c
 	$(CC) mioEditor.c -o mioEditor -Wall -Wextra -pedantic -std=c99
 test1:
-	./mioEditor fileDaleggereUnaRiga.txt
+	./mioEditor TestInProgress/fileDaleggereUnaRiga.txt
 test2:	
-	./mioEditor fileTabbato.txt
+	./mioEditor TestInProgress/fileTabbato.txt
+nuovo:
+	./mioEditor
 clean: 
 	$(RM) mioEditor
