Ho terminato la ricareca del testo Risolti alcuni bug che facevano saltare la posizione del cursore di un char dopo ogni invio nella ricerca Sto iniziando a creare snippet :) ---> Voglio far conoscere l'estensione del file al mio editor, in modo tale che possa colorare la sintassi del testo in determinate condizioni

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,6 +5,8 @@ test1:
 	./mioEditor TestInProgress/fileDaleggereUnaRiga.txt
 test2:	
 	./mioEditor TestInProgress/fileTabbato.txt
+test3:
+	./mioEditor TestInProgress/fileC.c
 nuovo:
 	./mioEditor
 clean: 
