Ora è possibile installare il file tramite make install. Ulteriori modifiche in arrivo

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,20 @@
-CC=gcc 
+CC=gcc
 CFLAGS+=-Wall -Wextra -pedantic
 ProgName=LighTextEditor
 PROGS = main.c termFunc.c editorFunc.c
+INSTALL = autoInstall.c
 
 help:
 	@echo "Comandi Disponibili:"
 	@echo "\tall - Compila il Programma"
+	@echo "\tinstall - Installa il Programma sul tuo PC"
 	@echo "\tclean - clean up"
 	@echo "\thelp - Stampa questo Messaggio"
 
 all: main.c
 	$(CC) $(PROGS) -o $(ProgName) $(CFLAGS) 
+install:
+	$(CC) $(INSTALL) -o INSTALL && tput reset && ./INSTALL && rm INSTALL
 test1:
 	./LighTextEditor TestInProgress/fileDaleggereUnaRiga.txt
 test2:	
@@ -21,4 +25,4 @@ nuovo:
 	./LighTextEditor
 clean: 
 	$(RM) LighTextEditor && tput reset
-.PHONY: LighTeditor clean	& tput reset	#Forzo la compilazione ogni volta
+.PHONY: LighTeditor clean & tput reset	#Forzo la compilazione ogni volta
