Modifiche ai Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,9 @@
+RED='\033[1;91m'
+GREEN=\033[0;32m
+NC='\033[0m'
+NCGREEN = \033[0m
+BLUE=\033[1;96m
+
 CC=gcc
 CFLAGS+=-Wall -Wextra -pedantic
 ProgName=LighTextEditor
@@ -5,9 +11,9 @@ PROGS = main.c termFunc.c editorFunc.c highlight.c
 INSTALL = autoInstall.c
 
 help:
-	@echo "Comandi Disponibili:"
-	@echo "\tall - Compila il Programma"
-	@echo "\tinstall - Installa il Programma sul tuo PC"
+	@echo $(RED)"Comandi Disponibili:"$(NC)
+	@echo "\t$(GREEN)all$(NCGREEN) - Compila il Programma"
+	@echo "\t$(BLUE)install$(NCGREEN) - Installa il Programma sul tuo PC"
 	@echo "\tclean - clean up"
 	@echo "\thelp - Stampa questo Messaggio"
 
